--- a/static/css/dashboard/purchase_list.css
+++ b/static/css/dashboard/purchase_list.css
@@ -1,6 +1,5 @@
 .dashboard-purchase-list .purchase-list-nav {
     margin-top: 25px;
-    /*text-align: center;*/
     margin-left: 25px;
 }
 
@@ -9,9 +8,21 @@
     font-size: 14px;
     color: rgba(0, 0, 0, .6);
     font-weight: 600;
-    width: 80px;
     text-align: center;
     cursor: pointer;
+    margin-right: 20px;
+}
+
+.dashboard-purchase-list .purchase-list-nav ul li:first-child {
+    margin-left: 10px;
+}
+
+.dashboard-purchase-list .purchase-list-nav ul li:last-child {
+    margin-right: 0;
+}
+
+.dashboard-purchase-list .purchase-list-nav .active {
+    color: #648efc;
 }
 
 .dashboard-purchase-list .item-list {
@@ -49,12 +60,14 @@
     font-size: 16px;
     font-weight: 700;
     margin-bottom: 10px;
+    color: rgba(0, 0, 0, .7);
 }
 
 .dashboard-purchase-list .item-list .item .title .meta p {
     display: inline-block;
-    font-size: 16px;
-    font-weight: 400;
+    font-size: 14px;
+    font-weight: 300;
+    color: rgba(0, 0, 0, .6);
 }
 
 .dashboard-purchase-list .item-list .item .seller {
@@ -124,4 +137,14 @@
 .dashboard-purchase-list .item-list .item textarea {
     width: 100%;
     resize: none;
+}
+
+.no-list {
+    text-align: center;
+    color: #648efc;
+    font-weight: 600;
+    font-size: 14px;
+    margin-top: 100px;
+    padding-bottom: 100px;
+    border-bottom: 1px solid #DEDEDE;
 }
