--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -52,14 +52,14 @@ body {
 .dashboard-content .dashboard-info {
     border: 2px solid #DADADA;
     width: 561px;
-    height: 195px;
+    height: 170px;
     text-align: center;
 }
 
 .dashboard-content .dashboard-info-summary {
     display: inline-block;
     width: 32%;
-    margin-top: 35px;
+    margin-top: 25px;
     margin-bottom: 45px;
     height: 121px;
 }
@@ -67,6 +67,7 @@ body {
 .dashboard-content .dashboard-info-summary .dashboard-info-summary-title {
     font-size: 14px;
     font-weight: 700;
+    color: rgba(0, 0, 0, .7);
 }
 
 .dashboard-content .dashboard-info-summary {
@@ -85,8 +86,8 @@ body {
 
 .dashboard-content .dashboard-info-summary .dashboard-info-img {
     background: #DEDEDE;
-    height: 100px;
-    width: 100px;
+    height: 90px;
+    width: 90px;
     border-radius: 50%;
     display: inline-block;
     position: relative;
