--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block js %}
+    <script type="text/javascript" src="{% static 'js/autoNumeric-min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/product.js' %}"></script>
     {% block dashboard_js %}
     {% endblock %}
