--- a/static/css/product_detail.css
+++ b/static/css/product_detail.css
@@ -345,7 +345,7 @@ body {
 }
 
 .content .product-top .info-right .product-option #product-unit {
-    font-size: 28px;
+    font-size: 24px;
     font-weight: bold;
     color: #648efc;
 }
@@ -354,7 +354,7 @@ body {
     width: 50%;
     height: 66px;
     float: left;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: bold;
     background: #F2F2F2;
     color: #648efc;
@@ -364,7 +364,7 @@ body {
     width: 50%;
     height: 66px;
     float: left;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: bold;
     background: #DADADA;
     color: #648efc;
@@ -374,7 +374,7 @@ body {
     width: 100%;
     height: 66px;
     float: left;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: bold;
     background: #648efc;
     color: white;
@@ -594,4 +594,11 @@ body {
     margin-top: 5px;
     line-height: 20px;
     font-size: 10px;
+}
+
+.no-list {
+	text-align: center;
+    color: #648efc;
+    font-size: 12px;
+    font-weight: 400;
 }
