--- a/templates/header.html
+++ b/templates/header.html
@@ -6,14 +6,14 @@
                 <img src="{% static 'img/logo.png' %}">
             </a>
         </div>
-        <div id="gnb">
-            <nav role="navigation" itemscope itemtype="">
-                <form>
-                    <input type="text" name="search" value="" id="gnb-search" placeholder="무엇을 찾고 계시나요?">
-                    <img class="fa-search" src="{% static 'img/search.png' %}">
-                </form>
-            </nav>
-        </div>
+{#        <div id="gnb">#}
+{#            <nav role="navigation" itemscope itemtype="">#}
+{#                <form>#}
+{#                    <input type="text" name="search" value="" id="gnb-search" placeholder="무엇을 찾고 계시나요?">#}
+{#                    <img class="fa-search" src="{% static 'img/search.png' %}">#}
+{#                </form>#}
+{#            </nav>#}
+{#        </div>#}
         <div id="header_tnb">
             {% if user.is_authenticated %}
                 <a id="point" href="{% url 'point_history' %}">
